feat: update to use @recore/fx

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" data-name="vs/editor/editor.main" href="/build/lib/monaco-editor/min/vs/editor/editor.main.css">
   <script src="/build/lib/react/react-bundle.js"></script>
   <script> React.PropTypes = PropTypes; </script>
-  <script src="/build/lib/recore/recore.umd.min.js"></script>
+  <script src="/node_modules/@recore/fx/umd/recore.js"></script>
   <script src="/build/lib/monaco-editor/min/vs/loader.js"></script>
   <script src="/build/lib/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
   <script src="/build/lib/monaco-editor/min/vs/editor/editor.main.js"></script>
